@@ -2,15 +2,16 @@ version = "1.0"
 group = "net.skds"
 archivesBaseName = "FunCode"
 
-project.ext.lwjglVersion = "3.3.3"
-project.ext.lwjglNatives = "natives-windows"
+//project.ext.lwjglVersion = "3.3.3"
+//project.ext.lwjglNatives = "natives-windows"
 
 dependencies {
 
     implementation project(':skdslib')
     implementation project(':ninvoker')
+    implementation project(':nativelib')
 
-    implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
+    //implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
 
     //implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
     //implementation "org.lwjgl:lwjgl"
@@ -36,6 +37,8 @@ compileJava {
     //options.compilerArgs.addAll(["--add-exports", "java.desktop/sun.awt.image=ALL-UNNAMED"])
     //options.compilerArgs.addAll(["--add-exports", "java.desktop/sun.java2d=ALL-UNNAMED"])
 
+    options.compilerArgs.addAll(["--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"])
     options.compilerArgs.addAll(["--add-exports", "java.desktop/sun.awt=ALL-UNNAMED"])
     options.compilerArgs.addAll(["--add-exports", "java.desktop/sun.awt.windows=ALL-UNNAMED"])
+
 }
